# opencode-codex-plugin

./: .gitignore  Dockerfile  README.md  docker-compose.yml  plugin_codexproxy.ts  pyproject.toml
codex_proxy/: app.py  cli.py  config.py  routes.py  schemas.py
